completed garbage collection